--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "grunt-contrib-cssmin": "^0.12.1",
     "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.1.0",
-    "grunt": "^0.4.5",
     "markdown": "^0.5.0",
-    "marked": "^0.3.3"
+    "marked": "^0.3.3",
+    "ncp": "^2.0.0"
   }
 }
